test/sematest/invalid/null_assign_null.java
class A {
    public static void main(String[] args) {
        null = null;
    }
}
